EBNF.txt
Program --> (Function)* MainFunction

MainFunction --> "int" "main" "(" ")" Block
Function --> Type Identifier "(" FormalList ")" Block
FormalList --> VarDecl ("," VarDecl)*

Statement --> Block | If  | While | VarDecl ";" | Assignment ";" | Return ";"
Block --> "{" (Statement)* "}"
If --> "if" "(" Expression ")" Statement "else" Statement
While --> "while" "(" Expression ")" Statement
VarDecl --> Type Identifier
Assignment --> Identifier "=" Expression
Return --> "return" Expression


Expression --> AndOrExpression
AndOrExpression --> CondExpression ( ("&&" | "||") CondExpression )*
CondExpression --> AddSubExpression ( "?" AddSubExpression ":" AddSubExpression )*
AddSubExpression --> MultDivExpression ( ("+" | "-") MultDivExpression )*
MultDivExpression --> PrimaryExpression ( ("*" | "/") PrimaryExpression )*
PrimaryExpression -->
	Identifier
	| FunctionCall
	| NumLiteral
	| BooleanLiteral
	| NotExpression
	| "-" PrimaryExpression
	| "(" Expression ")"

NotExpression --> ( "!" )? Expression
FunctionCall --> Identifier "(" ExpressionList ")"
ExpressionList --> Expression ("," Expression)*

Type --> "void" | "num" | "bool"
Identifier --> Letter (Letter | "_" | Digit)*

NumLiteral --> ("-")? (Digit)* (".")? (Digit)*
BooleanLiteral --> "true" | "false"

AddSub --> "+" | "-"
MulDiv --> "*" | "/"
Comp --> "<" | "<=" | "==" | ">=" | ">"
Cond --> "&&" | "||"
Letter --> ["A" - "Z", "a" - "z"]
Digit --> ["0" - "9"]
